Mobile fixes -Centered text on index -Tweaked contents of random text on index -"Next" arrow properly aligned on mobile

--- a/styles/main_style.css
+++ b/styles/main_style.css
@@ -179,8 +179,8 @@
 	{
 	  display: block;
 	  position: relative;
-	  top: 50px;
-	  left: 50px;
+	  top: 20px;
+	  left: 20px;
       width: 10px;
       height: 1px;
 	  
@@ -264,8 +264,23 @@
 
     #next {
         position: absolute;
-        right: 5%;
+        right: 10%;
         bottom: 50%;
+    }
+
+    .textBox {
+        width:100%;
+        display: table;
+        text-align: center;
+        position: absolute;
+        top: 20%;
+    }
+
+    .heroText {
+        text-align: center;
+        bottom:0%;
+        position: relative;
+        display: inline-block;
     }
 
 }
@@ -361,13 +376,39 @@
         right: 25%;
         bottom: 50%;
     }
+
+    .textBox {
+        display: table;
+        text-align: left;
+        min-width: 250px;
+        max-width: 625px;
+        position: absolute;
+        margin: 0 auto;
+        bottom: 40%;
+        left: 50px;
+    }
+
+    .heroText {
+        text-align: left;
+    }
     
 }
 
 .scrollable {
-    height: 60vh;
+    height: 70vh;
     overflow-y: auto;
+    position:relative;
 }
+.scrollable::after {
+    content:'';
+    bottom: 0;
+    left: 0;
+    height: 40px;
+    right: 0;
+    mask-image: linear-gradient(linear, left 90%, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)))
+
+/*    background: linear-gradient(to bottom, rgba(251, 251, 251, 0) 0%, rgba(251, 251, 251, 1) 100%);    position: fixed;
+*/}
 .canvas-content {
     width:100%;
     text-align: center;
@@ -390,17 +431,6 @@ body.aboutMe {
 
 body.work {
     background-image: linear-gradient(to bottom right, #8f75c5, #472b67);
-}
-
-.textBox {
-    display: table;
-    text-align: left;
-    min-width: 250px;
-    max-width: 625px;
-    position: absolute;
-    margin: 0 auto;
-    bottom: 45%;
-    left: 50px;
 }
 
 footer {
@@ -442,7 +472,6 @@ p {
 .heroText {
     font-size: 2em;
     color: white;
-    text-align: left;
     font-family: 'Ubuntu', sans-serif;
     font-weight: bolder;
 }
